examples/type_system/failing/77_hm_logical_non_bool_compile_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn bad(a: Int, b: Bool) -> Bool {
    a && b
}

fn main() -> Unit with IO {
    print(to_string(bad(1, true)))
}
